java/java-tests/testData/codeInsight/multipleJdks/java7/p/SuperclassImplementsGenericsOfUnknownType.java
package p;
<error descr="Cannot access java.util.stream.Stream">abstract class B extends A</error>{}
<error descr="Cannot access java.util.stream.Stream">abstract class C extends A1</error>{}
abstract class D extends A2 {}
